--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    <string name="i_am_poor">I Am Poor but still rich</string>
+    <string name="coal_pic">coal_pic</string>
 </resources>
